--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ajv": "^8.17.1",
     "cra-template": "1.2.0",
     "crypto-js": "^4.2.0",
+    "ethers": "^6.13.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
